Feature/send custom invitation emails
* add customising functionality to the sendInvitationEmail method

* add first name and last name columns to the Participant table

* create customEmailText method in the StudyService class

* update the participant creation form to reflect change in the participant table

* add customisation instructions to the study edit/create form

* add a unit test to test the custom invitation functionality

* resolve merge conflicts

--- a/src/main/webapp/app/entities/participant/participant-detail.component.html
+++ b/src/main/webapp/app/entities/participant/participant-detail.component.html
@@ -8,6 +8,14 @@
         <dd>
             <span>{{participant.email}}</span>
         </dd>
+        <dt><span>First Name</span></dt>
+        <dd>
+            <span>{{participant.firstName}}</span>
+        </dd>
+        <dt><span>Last Name</span></dt>
+        <dd>
+            <span>{{participant.lastName}}</span>
+        </dd>
         <dt><span>Occupation</span></dt>
         <dd>
             <span>{{participant.occupation}}</span>
